--- a/requirements.txt
+++ b/requirements.txt
@@ -55,6 +55,7 @@ sniffio==1.3.1
 SQLAlchemy==2.0.31
 stack-data==0.6.3
 tenacity==8.5.0
+tinydb==4.8.0
 tornado==6.4.1
 traitlets==5.14.3
 twelvelabs==0.2.6
